fix: sidebar navigation layout and adjust padding for better spacing

--- a/src/app/components/sidebar/sidebar.scss
+++ b/src/app/components/sidebar/sidebar.scss
@@ -25,9 +25,10 @@
 }
 
 .sidebar-nav {
-  @include flex(column, wrap, center, stretch);
+  @include flex(column, wrap, stretch);
   gap: 15px;
   padding:  0;
+  padding-top: 110px;
   flex: 1;
   width: 100%;
 }
@@ -61,7 +62,7 @@
 .sidebar-footer {
     @include flex(column, nowrap, center, center);
     gap: 0;
-    padding: 100px 0 24px 0;
+    padding: 100px 0 60px 0;
     width: 100%;
 }
 
